Fixed spacing of logo and changed opacity of navigation menu.

--- a/themes/inhabitent/sass/_navigation.scss
+++ b/themes/inhabitent/sass/_navigation.scss
@@ -139,8 +139,8 @@ a {
     border-bottom: 1px solid lightgrey;
     width: 100%;
     z-index: 999;
-    background: rgba(255, 255, 255, 0.5);
-		padding: 0 93px;
+    background: rgba(255, 255, 255, 0.8);
+		padding: 0 98px;
   }
 
 .site-branding {
@@ -151,7 +151,7 @@ a {
 .logo {
   align-self: flex-start;
   width: 50px;
-  margin-left: 10px;
+  margin-left: 16px;
 
 }
 .nav-wrapper {
