--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -535,8 +535,8 @@ a {
   border-bottom: 1px solid lightgrey;
   width: 100%;
   z-index: 999;
-  background: rgba(255, 255, 255, 0.5);
-  padding: 0 93px; }
+  background: rgba(255, 255, 255, 0.8);
+  padding: 0 98px; }
 
 .site-branding {
   -ms-flex-pack: start;
@@ -547,7 +547,7 @@ a {
   -ms-flex-item-align: start;
       align-self: flex-start;
   width: 50px;
-  margin-left: 10px; }
+  margin-left: 16px; }
 
 .nav-wrapper {
   display: -ms-flexbox;
